--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -2,24 +2,23 @@
 
 This section presents the concepts, definitions, and theorems from the field of graph theory that are needed in the
 development of the proposed algorithm.  This material is primarily taken from the textbooks used
-\cite{chartrand,west} and class notes compiled by the author during his undergraduate and graduate graph theory
-classes at SJSU.
+by the author during his undergraduate and graduate graph theory classes at SJSU \cite{chartrand,west}.
 
 \subsection{Simple Graphs}
 
-The problem of part consolidation is best served by a class of graphs called \emph{simple graphs}:
+The problem of part consolidation is best served by a class of graphs called \emph{simple graphs}.  A \emph{simple
+  graph} is a mathematical object represented by an ordered pair \(G=(V,E)\) consisting of a non-empty and finite
+set of \emph{vertices} (also called \emph{nodes}): \(V(G)\), and a finite and possibly empty set of edges:
+\(E(G)\).  Each edge is represented by a two-element subset of \(V(G)\) called the \emph{endpoints} of the edge:
+\(E(G)\subseteq\ps_2\left(V(G)\right)\).  For the remainder of this work, the use of the term ``graph'' implies a
+``simple graph.''  Thus, a part consolidation problem can be represented by a graph whose vertices are the
+functional requirements (FRs) of the design and whose edges indicate which endpoint FRs should never be combined
+into a single part.
 
-\begin{definition}[Simple Graph]
-  A \emph{simple graph} is a mathematical object represented by a tuple \(G=(V,E,\ldots)\) consisting of a
-  non-empty and finite set of \emph{vertices} (also called \emph{nodes}) \(V(G)\), a finite and possibly empty set
-  of edges \(E(G)\), and zero of more relations.  Each edge is represented by a two-element subset of \(V(G)\)
-  called the \emph{endpoints} of the edge:
-  \[E(G)\subseteq\ps_2\left(V(G)\right)\]
-  Each relation has \(V(G)\) or \(E(G)\) as its domain and is used to associated vertices or edges with
-  problem-specific attributes.
-\end{definition}
-
-For the remainder of this work, the use of the term ``graph'' implies a ``simple graph.''
+In addition to the vertices and edges, a graph may be associated with one or more relations.  Each relation has
+\(V(G)\) or \(E(G)\) as its domain and is used to associate vertices or edges with problem-specific attributes such
+as labels or colors.  Some authors include these relations and their codomains as part of the graph tuple; however,
+since these extra tuple elements don't affect the structure of the graph, we will not do so.
 
 The choice of two-element subsets of \(V(G)\) for the edges has certain ramifications that are indeed characteristics
 that differentiate a simple graph from other classes of graphs:
@@ -31,9 +30,8 @@ that differentiate a simple graph from other classes of graphs:
 \item The two endpoint vertices are unordered, suggesting that an edge provides a bidirectional connection between
   its endpoint vertices.
 \end{enumerate}
-
-A part consolidation problem can be represented by a graph whose vertices are the functional requirements (FRs) of
-the design and whose edges indicate which endpoint FRs should never be combined into a single part.
+When referring to the edges in a graph, the common notation of juxtaposition of the vertices will be used instead of
+the set syntax.  Thus, edge \(\set{u,v}\) is simply referred to as \(uv\).
 
 Graphs are often portrayed visually using labeled or filled circles for the vertices and lines for the edges such
 that each edge line is drawn between its two endpoint vertices.  An example graph is shown in Figure
@@ -80,37 +78,14 @@ that each edge line is drawn between its two endpoint vertices.  An example grap
   \caption{An Example Graph (labeled and unlabeled)}
 \end{figure}
 
-\begin{samepage}
-  When referring to the edges in a graph, the following common notation will be used:
+When two vertices are the endpoints of the same edge, the vertices are said to be \emph{adjacent} or are called
+\emph{neighbors}, and the edge is said to \emph{join} its two endpoint vertices.  Furthermore, an edge is said to
+be \emph{incident} to its endpoint vertices.  In the example graph of Figure \ref{fig:exgraph}, vertex \(a\) is
+adjacent to vertices \(b\), \(d\), and \(e\).
 
-  \begin{notation}[Edge]
-    The edge \(\set{u,v}\) is represented by the simple juxtaposition \(uv\) or \(vu\).
-  \end{notation}
-\end{samepage}
-
-Note that there is no requirement that every vertex in a graph be an endpoint to some edge:
-
-\begin{definition}[Isolated Vertex]
-  Let \(G\) be a graph and let \(u\in V(G)\).  To say that \(u\) is an \emph{isolated} vertex means that it is not
-  an endpoint for any edge in \(E(G)\):
-  \[\forall\,e\in E(G),u\notin e\]
-\end{definition}
-
-In the example graph of Figure \ref{fig:exgraph}, notice that vertex \(c\) is an isolated vertex.
-
-When two vertices are the endpoints of the same edge the vertices are said to be \emph{adjacent} or are called
-\emph{neighbors}:
-
-\begin{definition}[Adjacent Vertices]
-  Let \(G\) be a graph and let \(u,v\in V(G)\).  To say that \(u\) and \(v\) are \emph{adjacent} vertices, also
-  called \emph{neighbors}, means that they are the endpoints of some edge \(e\in E(G)\):
-  \[\exists\,e\in E(G),e=uv\]
-  The edge \(e\) is said to \emph{join} its two endpoint vertices \(u\) and \(v\).  Furthermore, the edge \(e\) is
-  said to be \emph{incident} to its endpoint vertices \(u\) and \(v\).
-\end{definition}
-
-In the example graph of Figure \ref{fig:exgraph}, notice that vertex \(a\) is adjacent to vertices \(b\), \(e\),
-and \(d\); and vertex \(b\) is adjacent to vertex \(e\).
+As demonstrated by vertex \(c\) in Figure \ref{fig:exgraph}, there is no requirement that every vertex in a graph
+be an endpoint for some edge.  In fact, a vertex that is not incident to any edge is called an \emph{isolated}
+vertex.
 
 We can also speak of adjacent edges, which are edges that share an endpoint:
 
