--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -22,6 +22,8 @@
 \newcommand{\restrict}[2]{#1\raise-0.5ex\hbox{\ensuremath|}_{#2}}
 \newcommand{\FR}{\text{FR}}
 \newcommand{\DP}{\text{DP}}
+\newcommand{\txtclr}[1]{\textcolor{#1}{#1}}
+\newcommand{\mtxtclr}[1]{\text{\txtclr{#1}}}
 \allowdisplaybreaks
 \begin{document}
 
